# SQLModule

./: CMakeLists.txt  README.md  xmake.lua
include/: module.hpp  pch.hpp
include/SDK/: ModuleAPI.hpp  SDK.hpp  ScriptAPI.hpp
include/SDK/Universe/: UniverseTypes.hpp
src/: module.cpp  r.cpp
